--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.leon</groupId>
-    <artifactId>mq</artifactId>
+    <artifactId>springboot-rabbitmq</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>mq-test</name>
+    <name>leon-mq</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
@@ -53,13 +53,6 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>1.3.2</version>
         </dependency>
-
-       <!-- <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
-            <scope>provided</scope>
-        </dependency>-->
 
         <dependency>
             <groupId>org.apache.tomcat</groupId>
